More elements are added
HTML elements

--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@
     <ul>Tirannosaure</ul>
     <ul>Triceratops</ul>
     <ul>Diplodocus</ul>
+
+
+    <h3>Passos per veure dinosaure a Internet</h3>
+    <ol>
+        <li>Obrir el navegador</li>
+        <li>Escriure "Dinosaure" al cercador</li>
+        <li>Fer clic al enllaços</li>
+    </ol>
+
+    <img src="imatges/dinosauriorex.jpg" width="200"/>
+    <br>
+    <a href="https://ca.wikipedia.org/wiki/Dinosaures" target="_blank">Més informació sobre els dinosaures</a>
+    
    </body>
 </html>
