--- a/index.html
+++ b/index.html
@@ -19,9 +19,25 @@
         <li>Fer clic al enllaços</li>
     </ol>
 
-    <img src="imatges/dinosauriorex.jpg" width="200"/>
-    <br>
-    <a href="https://ca.wikipedia.org/wiki/Dinosaures" target="_blank">Més informació sobre els dinosaures</a>
     
+    <a href="https://ca.wikipedia.org/wiki/Dinosaures" target="_blank">
+        <img src="imatges/dinosauriorex.jpg" alt="Dinosaures"  width="200"/>
+    <br>
+        Més informació sobre els dinosaures
+        <br>
+    </a>
+
+    <a href="galeria.html" target="_blank">
+        <br>
+        Veure galeria d'animals prehistòrics
+        <br>
+    </a>
+
+    <a href="contacte.html" target="_blank">
+        <br>
+        Contacte amb nosaltres
+        <br>
+    </a>
+
    </body>
 </html>
