End of the web page
Galeria i contacte

--- a/galeria.html
+++ b/galeria.html
@@ -48,11 +48,17 @@
 
        <ul>
         <li>
-            <h3>Fòssil de Velociraptor</h3>
+            <h3>Esquelet de Velociraptor</h3>
             <img src="imatges/Velociraptor.png" alt="Velociraptor" width="200"></li>
             <p>Va ser un dinosaure carnívor que va viure fa aproximadament 75 milions d'anys durant el període Cretaci</p>
             <br>
        </ul>
+       <li>
+        <a href="index.html">Pàgina Principal</a>
+        <br>
+        <br>
+        <a href="contacte.html">Contacte amb nosaltres</a>
+       </li>
       
    </body>
 </html>
