--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
    <body>
     <h1>Animals Prehistòrics</h1>
     <h2>Dinosaures</h2>
-    <ul>Tirannosaure</ul>
-    <ul>Triceratops</ul>
-    <ul>Diplodocus</ul>
+    <ul>
+        <li>Tirannosaure</li>
+        <li>Triceratops</li>
+        <li>Diplodocus</li>
+    </ul>
+    
 
 
     <h3>Passos per veure dinosaure a Internet</h3>
