--- a/contacte.html
+++ b/contacte.html
@@ -10,7 +10,9 @@
         Sóc un paleontòleg apassionat pels fòssils i la història dels dinosaures. <br>
         A través dels fòssils de dinosaure,reconstruïm com eren, com vivien i quins secrets guarden.
     </p>
+    <br>
 
+    <h3>Dades Personals</h3>
     <ul>
         <li>Nom:  Dr. Mark Norell</li><br>
         <li>Professió:  Paleontòleg</li><br>
@@ -36,7 +38,7 @@
     <li>
         <br>
         <br>
-        <a href="index.html">Pàgina Principal</a>
+        <a href="index.html">Tornar a la pàgina Principal</a>
     </li>
 
    </body>
