--- a/galeria.html
+++ b/galeria.html
@@ -54,10 +54,10 @@
             <br>
        </ul>
        <li>
-        <a href="index.html">Pàgina Principal</a>
+        <a href="index.html">Tornar a la pàgina Principal</a>
         <br>
         <br>
-        <a href="contacte.html">Contacte amb nosaltres</a>
+        <a href="contacte.html">Contacte amb el paleontòleg</a>
        </li>
       
    </body>
