--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
     <a href="galeria.html" target="_blank">
         <br>
-        Veure galeria d'animals prehistòrics
+        Veure galeria de dinosaures
         <br>
     </a>
 
     <a href="contacte.html" target="_blank">
         <br>
-        Contacte amb nosaltres
+        Contacte amb mi
         <br>
     </a>
 
