--- a/galeria.html
+++ b/galeria.html
@@ -54,7 +54,7 @@
             <br>
        </ul>
        <li>
-        <a href="index.html">Tornar a la pàgina Principal</a>
+        <a href="index.html">Tornar a la pàgina principal</a>
         <br>
         <br>
         <a href="contacte.html">Contacte amb el paleontòleg</a>
